assets/css/styles.css
html, body{
	height: 100%;
}

#search{
	position: absolute;
	top: -12px;
	height: 35px;
	padding-left: 5px;
	box-shadow: none;
	border: 1px solid #ffffff38;
}

#search:focus{
	box-shadow: 0px 0px 19px 1px white;
}

.input-field input[type=search]{
	transition: .3s background-color box-shadow;
}

.pit-blue{
	background-color: #3161ac;
}

.pit-gold{
	background-color: #f7cc07;
}

.pit-blue-text{
	color: #3161ac;
}

.pit-gold-text{
	color: #f7cc07;
}

nav{
	height: 120px;
	z-index: 5;
}

nav ul a{
	font-size: 1.5rem;
}

#pitSwapTitle{
	font-size: 3.5rem;
	font-family: 'Faster One', cursive;
	user-select: none;
	text-align: center;
}

#navContainer{
	padding-left: 25px;
	padding-left: 25px;
}

#logo-container{
	height: 120px;
	width: 180px;
	z-index: 5;
}

#menuIcon{
	font-size: 64px;
}

.sidenavLargeScreen {
	
	background-color: #fff;
	box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
	height: 100%;
	left: 0;
	margin: 0;
	padding-top: 120px;
	padding-bottom: 60px;
	padding-left: 10px !important;
	padding-right: 10px !important;
	position: fixed;
	top: 0;
	transition: .5s ease all;
	width: 180px;
	z-index: 0;
}

.sidenav{
	width: 250px;
}

.myHeader{
	width: fit-content;
	padding: 5px;
	border-left: 3px solid #3161ac;
	border-bottom: 3px solid #3161ac;
}

.productCol{
	
	white-space: initial;
	display: inline-block;
	min-width: 300px;
	margin: 0 20px;
	vertical-align: top;
}

.productNameAndPrice{
	padding: 18px 18px 18px 18px;
	margin-bottom: 0;
}

/**
 * Overwrite Materialize's styles.
 */
 
 .productRow {
 	
 	overflow-x: auto;
 	white-space: nowrap;
 	-webkit-overflow-scrolling: touch;
 }
 
 .card{
 	max-width: 300px;
 }
 
 .card .card-action{
 	border-top: none;
 }

.card .card-action a:not(.btn):not(.btn-large):not(.btn-small):not(.btn-large):not(.btn-floating) {
	
	margin-right: 0;
}

.card .card-title{
	font-weight: 600;
}

.card .card-content {
	
	padding: 0;
}

.productImage{
	background-size: contain;
	background-repeat: no-repeat;
	background-position: center;
	height: 250px;
	width: 100%;
}
/*****************/
#greenPlanet{
	background-image: url("../images/green_planet2.jpg");
}

#psychiatryTextbook{
	background-image: url("../images/textbookExample.jpg");
}

.integratedIridologyTextbook{
	background-image: url("../images/verticalTextbookExample.jpg");
}
/*****************/
.seller-card-image{
	vertical-align: bottom;
	border-radius: 0 0 2px 2px;
	display: block;
	margin-left: auto;
	margin-right: auto;
}

#searchBar {
	width: 180px;
	padding-left: 10px;
	box-sizing: border-box;
	/*border-top: 2px solid #29b6f6;
	border-bottom: 2px solid #29b6f6;*/
	border: 2px solid #3161ac;
}

@media only screen and ( max-width: 992px ) {
	
	nav .brand-logo.left {
		
	}
}

@media only screen and (max-width: 1300px){
	.navLinks > li > a {
		font-size: 14px;
	}
}

#postProductBtn{
	height: 100px;
	width: 100px;
}

#postProductBtn:hover{
	background-color: #3161ac;
}

#postProductBtn:active{
	background-color: #3161ac;
}

#addProductIcon{
	line-height: 100px;
	font-size: 3.6rem;
}

.btn:hover{
	background-color: #3161ac;
}

.btn:active{
	background-color: #3161ac;
}

